@@ -181,6 +181,7 @@ void PreferencesDialog::loadPrefs()
 
 	cbAutoSaveDoc->setChecked(M_PREFS->getAutoSaveDoc());
 	cbAutoExtractTracks->setChecked(M_PREFS->getAutoExtractTracks());
+	cbReadonlyTracksDefault->setChecked(M_PREFS->getReadonlyTracksDefault());
 
 	ToolList* tl = M_PREFS->getTools();
 	ToolListIterator i(*tl);
@@ -285,6 +286,7 @@ void PreferencesDialog::savePrefs()
 
 	M_PREFS->setAutoSaveDoc(cbAutoSaveDoc->isChecked());
 	M_PREFS->setAutoExtractTracks(cbAutoExtractTracks->isChecked());
+	M_PREFS->setReadonlyTracksDefault(cbReadonlyTracksDefault->isChecked());
 
 	ToolList* tl = M_PREFS->getTools();
 	tl->clear();
