@@ -25,8 +25,8 @@
      <widget class="QWidget" name="tab_7" >
       <property name="geometry" >
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>8</x>
+        <y>60</y>
         <width>624</width>
         <height>436</height>
        </rect>
@@ -104,8 +104,8 @@
      <widget class="QWidget" name="tab_4" >
       <property name="geometry" >
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>4</x>
+        <y>30</y>
         <width>624</width>
         <height>436</height>
        </rect>
@@ -464,8 +464,8 @@
      <widget class="QWidget" name="tab_5" >
       <property name="geometry" >
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>4</x>
+        <y>30</y>
         <width>624</width>
         <height>436</height>
        </rect>
@@ -566,8 +566,8 @@
      <widget class="QWidget" name="tabTemplate" >
       <property name="geometry" >
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>4</x>
+        <y>30</y>
         <width>624</width>
         <height>436</height>
        </rect>
@@ -754,11 +754,22 @@
          </property>
          <layout class="QVBoxLayout" >
           <item>
-           <widget class="QCheckBox" name="cbAutoExtractTracks" >
-            <property name="text" >
-             <string>Automatically extract tracks on open</string>
-            </property>
-           </widget>
+           <layout class="QHBoxLayout" name="horizontalLayout_7" >
+            <item>
+             <widget class="QCheckBox" name="cbAutoExtractTracks" >
+              <property name="text" >
+               <string>Automatically extract tracks on open</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="cbReadonlyTracksDefault" >
+              <property name="text" >
+               <string>Track layers readonly by default</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_9" >
@@ -799,8 +810,8 @@
      <widget class="QWidget" name="tab_6" >
       <property name="geometry" >
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>4</x>
+        <y>30</y>
         <width>624</width>
         <height>436</height>
        </rect>
@@ -891,8 +902,8 @@
      <widget class="QWidget" name="tab" >
       <property name="geometry" >
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>4</x>
+        <y>30</y>
         <width>624</width>
         <height>436</height>
        </rect>
@@ -975,8 +986,8 @@
      <widget class="QWidget" name="tab_2" >
       <property name="geometry" >
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>4</x>
+        <y>30</y>
         <width>624</width>
         <height>436</height>
        </rect>
@@ -1078,8 +1089,8 @@
      <widget class="QWidget" name="tabTools" >
       <property name="geometry" >
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>4</x>
+        <y>30</y>
         <width>624</width>
         <height>436</height>
        </rect>
